samples/_failures_safe/1761140164_80ffb8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6255679b.c: In function ‘main’:
./samples/SAFE/__tmp_6255679b.c:169:25: error: missing terminating " character
  169 |         fprintf(stderr, "Failed to create token
      |                         ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6255679b.c:169:9: error: expected expression at end of input
  169 |         fprintf(stderr, "Failed to create token
      |         ^~~~~~~
./samples/SAFE/__tmp_6255679b.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6255679b.c:169:9: error: expected declaration or statement at end of input
